--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <main>
     <div>
         <section>
+            <center>
+                <img src="PictureOfMe.jpg" width="600" alt="picture of myself"/>
+            </center>
             <header>
 	            <h3>Hey! I'm Xyrex Buss</h3>
             </header>
@@ -42,12 +45,16 @@
         <!--end of 2nd part of main-->
         <hr>
         <section>
-            <h6>Contact Me</h6>
+            <center>
+                <h6>Contact Me</h6>
+            </center>
             <ol>
             <li><a href="https://github.com/xyrexbuss">Github</a></li>
             <li><a href="https://www.linkedin.com/in/xyrex-buss-673684218/">LinkedIn</a></li>
             </ol>
-            <img src="location.png" width="700" alt="picture of my general location"/>
+            <center>
+                <img src="Location.png" width="800" alt="picture of my general location"/>
+            </center>
         </section>
         <!--end of contact me, bottom part-->
     </div>
