--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li><a href="https://www.linkedin.com/in/xyrex-buss-673684218/">LinkedIn</a></li>
             </ol>
             <center>
-                <img src="Location.png" width="800" alt="picture of my general location"/>
+                <img src="location.png" width="800" alt="picture of my general location"/>
             </center>
         </section>
         <!--end of contact me, bottom part-->
